<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General Android App Strings -->
    <string name="app_name">FlaxAndroidHangman</string>
    <string name="app_name_launcher">Hangman</string>
    <string name="blank_string"></string>
    <string name="title_activity_home_screen">Home Screen</string>
    <string name="title_activity_list_screen">List Screen</string>

    <!-- Home Screen Strings -->
    <string name="flax_icon">Flax Icon</string>
    <string name="main_activity_text">HANGMAN</string>
    <string name="main_play_button">Play</string>
    <string name="title_activity_collocation_game_view">Game Screen</string>

    <!-- List Screen strings -->
    <string name="arrow_icon">Arrow Icon</string>

    <!-- Home Screen Options Menu Strings -->
    <string name="network_settings">Network settings</string>
    <string name="download_exercises">Check for new exercises</string>
    <string name="change_server">Change server</string>

    <!-- Game Screen Option Menu Strings -->
    <string name="help">Help</string>
    <string name="how_to_play">How to play</string>
    <string name="check_answer">Check answer</string>
    <string name="summary_report">Summary report</string>
    <string name="restart_game">Restart game</string>
    <string name="enable_sample">Enable sample sentences</string>

    <!-- Messages -->
    <string name="game_screen_help_message">How to play: \nIn the options menu, select \'How to Play\' to learn how to play this activity. \n \nCheck Answer: \nTo check whether your answers are correct, select \'Check Answer\' either in the options menu or the button at the bottom of the screen. \n \nSummary Report: \n�Summary Report� in the Options menu shows your start time, end time and score for the current game. \n \nRestart Game: \nTo restart the game, select \'Restart Game\' from the options menu.</string>
    <string name="how_to_play_message">Players guess a hidden word by guessing individual letters. A correct guess reveals the letter\'s position in the word, while an incorrect guess brings you one step closer to being \"hanged\". The game is over when you guess all the letters in the word correctly, or you make 10 incorrect guesses.\nYou can guess the letters by clicking on them at the top of the exercise, or by typing the chosen letter on your keyboard.\nSometimes the word may already have correct letters guessed for you. You may also be given a hint that describes the hidden word. There will be a lightbulb below the word which you can click if this is the case.</string>

</resources>