<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/img_flax_help"
        android:title="@string/help"/>
    
    <item
        android:id="@+id/how_to_play"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/how_to_play"/>
        
    <item
        android:id="@+id/check_answer"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/check_answer"/> 
        
    <item
        android:id="@+id/restart_game"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/restart_game"/> 
        
    <item
        android:id="@+id/summary_report"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/summary_report"/> 
        <!-- 
    <item
        android:id="@+id/enable_sample"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/enable_sample"/>  -->

</menu>